# Lore

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  MIGRATION_WIKI_TO_DOC.md  README.md  goal.md  lore-schema.example.json  lore.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: erd-generator.md  erd-reviewer.md  lark-integration-reviewer.md  (+1 more)
docs/: CONNECTION_MANAGEMENT.md  LARK_SETUP.md  backlog.md  goal.md  lore.html
erd_output/: erd_ab.mmd  erd_account.mmd  erd_admin.mmd  erd_affiliate.mmd  erd_agreement.mmd  erd_anti.mmd  erd_article.mmd  erd_auto.mmd  erd_bank.mmd  erd_bizsequence.mmd  erd_business.mmd  erd_bybit.mmd  erd_call.mmd  erd_campaign.mmd  erd_card.mmd  erd_cc.mmd  erd_channel.mmd  erd_client.mmd  erd_commission.mmd  erd_commissions.mmd  erd_component.mmd  erd_config.mmd  erd_coupon.mmd  erd_cpa.mmd  erd_cr.mmd  erd_dap.mmd  erd_dashboard.mmd  erd_datascope.mmd  erd_dc.mmd  erd_desensitize.mmd  erd_dmd.mmd  erd_doris.mmd  erd_event.mmd  erd_exchange.mmd  erd_extra.mmd  erd_filter.mmd  erd_first.mmd  erd_four.mmd  erd_function.mmd  erd_group.mmd  (+52 more)
lore/: cli.py  config.py  connections.py  db_introspect.py  erd.py  erd_categorized.py  mermaid_renderer.py  models.py  pipeline.py  schema_store.py
scripts/: generate_pdf.js  test_run.py  test_run.sh  test_run_high.py  test_run_low.py  test_run_medium.py
tests/: test_cli.py  test_cli_erd.py  test_config.py  test_connections.py  test_db_introspect.py  test_erd.py  test_erd_categorized.py  test_mermaid_renderer.py  test_models.py  test_pipeline.py  test_schema_store.py
(+134 files in other folders)
