[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lore"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "gitpython>=3.1.40",
    "sqlglot>=23.0.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]

[project.scripts]
lore = "lore.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
